cli/tests/snapshot/snapshots/snapshot__eval_stderr_destructuring_type_mismatch_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: incompatible types
  ┌─ [INPUTS_PATH]/errors/destructuring_type_mismatch_fail.ncl:3:29
  │
3 │ (let { a : Number } = { a = "hi" } in
  │                             ^^^^ this expression
  │
  = Expected an expression of type `Number`
  = Found an expression of type `String`
  = These types are not compatible


